# rust-auth

./: .env  Cargo.toml  LICENSE
docker/: docker-compose.yml
migrations/: 20250619162600_create_users_table.up.sql
src/: main.rs
src/handlers/: login_handler.rs  mod.rs  registration_handler.rs
src/models/: mod.rs  user_model.rs
src/repositories/: auth_repository.rs
src/utils/: hash.rs  jwt.rs  mod.rs
